# Memory-Allocator

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_common.h  fixed_size_bench.cpp  latency_bench.cpp  mixed_size_bench.cpp  run_all.sh
include/memalloc/: allocator.h  common.h  free_list.h  slab_pool.h  thread_cache.h
src/: allocator.cpp  free_list.cpp  malloc_shim.cpp  mmap_utils.cpp  mmap_utils.h  slab_pool.cpp  slab_registry.cpp  slab_registry.h  thread_cache.cpp
tests/: CMakeLists.txt  test_alignment.cpp  test_coalesce.cpp  test_concurrent.cpp  test_double_free.cpp  test_thread_cache.cpp  test_values.cpp
